--- a/hello-play-java/.gitignore
+++ b/hello-play-java/.gitignore
@@ -17,3 +17,18 @@ dist
 /.settings
 /project/*-shim.sbt
 /bin
+/.target
+/.target
+/.target
+/.target
+/.target
+/.target
+/.target
+/.target
+/.target
+/.target
+/.target
+/.target
+/.target
+/.target
+/.target
