--- a/hello-play-java/conf/application.conf
+++ b/hello-play-java/conf/application.conf
@@ -41,11 +41,15 @@ application.langs="en"
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 # db.default.jndiName=DefaultDS
 
-db.default.driver=org.h2.Driver
-db.default.url="jdbc:h2:mem:play"
-db.default.user=sa
-db.default.password=sa
-#
+db.default.driver=org.hibernate.dialect.MySQL5Dialect
+db.default.url="jdbc:mysql://mysql:3306/db_tsm_osf_labo_2"
+db.default.user="adm_tsm"
+db.default.password=""
+#<property name="hibernate.dialect" value="org.hibernate.dialect.MySQL5Dialect" />
+#<property name="javax.persistence.jdbc.user" value="adm_tsm" />
+#<property name="javax.persistence.jdbc.password" value="" />
+#<property name="javax.persistence.jdbc.url" value="jdbc:mysql://mysql:3306/db_tsm_osf_labo_2" />
+
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 db.default.jndiName=DefaultDS
 
