--- a/hello-play-java/conf/application.conf
+++ b/hello-play-java/conf/application.conf
@@ -44,7 +44,7 @@ application.langs="en"
 db.default.driver=org.hibernate.dialect.MySQL5Dialect
 db.default.url="jdbc:mysql://mysql:3306/db_tsm_osf_labo_2"
 db.default.user="adm_tsm"
-db.default.password=""
+db.default.password="OSFMysql2"
 #<property name="hibernate.dialect" value="org.hibernate.dialect.MySQL5Dialect" />
 #<property name="javax.persistence.jdbc.user" value="adm_tsm" />
 #<property name="javax.persistence.jdbc.password" value="" />
