--- a/hello-play-java/conf/application.conf
+++ b/hello-play-java/conf/application.conf
@@ -78,5 +78,9 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+ehcacheplugin=disabled
+#memcachedplugin=disabled
+memcached.host="127.0.0.1:11211"
+
 
 #module.db=${play.path}/modules/db
