--- a/hello-play-java/conf/META-INF/log4j.properties
+++ b/hello-play-java/conf/META-INF/log4j.properties
@@ -8,3 +8,4 @@
 #org.hibernate.hql.ast.AST	 Log HQL and SQL ASTs during query parsing
 #org.hibernate.secure	Log all JAAS authorization requests
 #org.hibernate	 Log everything. This is a lot of information but it is useful for troubleshooting
+org.hibernate.jdbc=debug
