--- a/SchoolAPI/conf/application.conf
+++ b/SchoolAPI/conf/application.conf
@@ -72,3 +72,7 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+ehcacheplugin=disabled
+#memcachedplugin=disabled
+memcached.host="192.168.2.51:11211"
+memcached.host="192.168.2.52:11211"
